# Houdini-Ocean-Toolkit

./: .gitignore  .hgignore  .hgtags  CMakeLists.txt  README.txt
.hg/: branchheads.cache  dirstate  hgrc  tags.cache  undo.desc
.hg/store/: 00changelog.i  00manifest.d  00manifest.i  fncache  undo
.hg/store/data/: .hgignore.i  .hgtags.i  _c_make_lists.txt.i  _change_log.i  _l_i_c_e_n_s_e.txt.i  _r_e_a_d_m_e.txt.i  pavement.py.i  paver-minilib.zip.i  setup.py.i
.hg/store/data/_c_make_modules/: _find_blitz.cmake.i  _find_f_f_t_w.cmake.i  _find_h_d_k.cmake.i
.hg/store/data/docs/: _h_o_t__mineig.jpg.i  _h_o_t__sop__hg__c.jpg.i  _h_o_t__sop__hg__c__shader.jpg.i  _h_o_t__sop__lg__nc.jpg.i  _h_o_t__sop__parms.jpg.i  _h_o_t__vexdisp__500m.jpg.i  _makefile.i  conf.py.i  deploy.sh.i  hot.rst.i  index.rst.i  pavement.py.i
.hg/store/data/examples/: sop__flotsam.hip.i  sop__mineigval.hip.i  sop__simple.hip.i  vop__displace.hip.i  vopsop__foamparts.hip.i  vopsop__two__sources.hip.i
.hg/store/data/examples__and__otl/: sop__flotsam.hip.i  sop__simple.hip.i  vop__displace.hip.i  vopsop__foamparts.hip.i  vopsop__two__sources.hip.i
.hg/store/data/examples__and__otl/otls/: _h_o_t.otl.i
.hg/store/data/otls/: _h_o_t.otl.i
.hg/store/data/scripts/: googlecode__upload.py.i
.hg/store/data/src/: _c_make_lists.txt.i  _makefile.i  _ocean.h.i  _s_construct.i  _s_o_p___cleave._c.i  _s_o_p___cleave.h.i  _s_o_p___cleave.icon.i  _s_o_p___ocean._c.i  _s_o_p___ocean.h.i  _s_o_p___ocean.png.i  _v_e_x___ocean._c.i  _v_e_xdso__linux.i  _v_e_xdso__osx.i  _v_e_xdso__win32.i  compile__linux.sh.i  compile__osx.sh.i  compile__win32.sh.i  compile__win64.sh.i  pavement.py.i  paver-minilib.zip.i  setup.py.i
.hg/store/data/src/misc/: _c_make_lists.txt.i  _find3_delight.cmake.i  _r_s_l___ocean.cpp.i  ocean__eval.sl.i
.hg/store/data/src/oldstuff/: _s_construct.i  _v_e_xdso__linux.i  _v_e_xdso__osx.i  _v_e_xdso__win32.i  compile__linux.sh.i  compile__osx.sh.i  compile__win32.sh.i  compile__win64.sh.i
.hg/store/data/src/shadeop/: _c_make_lists.txt.i  _find3_delight.cmake.i  _r_s_l___ocean.cpp.i  ocean__eval.sl.i
CMakeModules/: FindBlitz.cmake  FindFFTW.cmake  FindHDK.cmake
docs/: conf.py  deploy.sh  index.rst  pavement.py
src/: CMakeLists.txt  Makefile  SOP_Cleave.C  SOP_Ocean.C  SOP_Ocean.h  VEX_Ocean.C  pavement.py  setup.py
src/oldstuff/: SConstruct  compile_linux.sh  compile_osx.sh  compile_win32.sh  compile_win64.sh
src/shadeop/: CMakeLists.txt  RSL_Ocean.cpp  ocean_eval.sl
